[tool.poetry]
name = "data-structures-and-algorithm"
version = "0.1.0"
description = ""
authors = ["MohamadSheikhAlshabab <alshabab.moh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
pytest-watch = "^4.2.0"
autopep8 = "^1.5.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
